--- a/_posts/1985-10-26-Test-Post.md
+++ b/_posts/1985-10-26-Test-Post.md
@@ -1,6 +1,6 @@
 ---
-layout: post
+published: true
 title: Test Post
+layout: post
 ---
-
 This is a test post writen in markdown. To learn more about markdown check out the [documentation](http://daringfireball.net/projects/markdown/) on [Daring Fireball](http://daringfireball.net/).
